# smartcrab

./: .gitignore  .sakokuignore  .worktreeinclude  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bun.lockb  compose.yml  package.json  renovate.json5  rust-toolchain.toml  skills-lock.json  tsconfig.base.json
.claude/skills/peekaboo/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: build-macos.yml  ci.yml  cruise.yml  docs.yml  lint.yml  publish-crates.yml  release.yml  sakoku.yml  update-skills.yml
apps/bun-service/: .gitignore  package.json  tsconfig.json
apps/bun-service/scripts/: build.ts
apps/bun-service/src/: _loaders.ts  dispatcher.ts  paths.ts  registry.ts  router.ts  rpc-loop.ts  server.ts  types.ts
apps/bun-service/src/__tests__/: adapter-claude.test.ts  adapter-copilot.test.ts  adapter-discord.test.ts  adapter-kimi.test.ts  auth-commands.test.ts  chat-bubble-commands.test.ts  cron.test.ts  db.test.ts  dispatcher.test.ts  engine.test.ts  kimi-share.test.ts  memory.test.ts  models-commands.test.ts  pipeline-author.test.ts  pipeline-roundtrip.test.ts  router.test.ts  rpc-loop.test.ts  settings-cleanup.test.ts  skills.test.ts  test-helpers.ts  write-settings.test.ts
apps/macos/: .swiftformat
apps/macos/Resources/: smartcrab-service
apps/macos/SmartCrab/: Info.plist  Preview-Info.plist  SmartCrab.entitlements
apps/macos/SmartCrab.xcodeproj/: project.pbxproj
apps/macos/Tests/: BunServiceContainerAutostartTests.swift  BunServiceISO8601ParsingTests.swift  PipelineAuthoringTests.swift  SidebarTabTests.swift
crates/seher-bridge/: Cargo.toml
crates/seher-bridge/src/: auth.rs  io.rs  main.rs  models.rs  protocol.rs
crates/seher-bridge/tests/: auth_status.rs  echo.rs
crates/smartcrab-app/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
crates/smartcrab-app/e2e/: package-lock.json
crates/smartcrab-app/src/: App.js  App.tsx  index.css  index.html  main.tsx
crates/smartcrab-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/smartcrab-app/src-tauri/capabilities/: default.json
crates/smartcrab-app/src-tauri/src/: db.rs  error.rs  lib.rs  main.rs
crates/smartcrab-app/src-tauri/src/adapters/chat/: discord.rs
crates/smartcrab-app/src-tauri/src/adapters/llm/: claude.rs
crates/smartcrab-app/src-tauri/src/bridge/: mod.rs
crates/smartcrab-app/src-tauri/src/commands/: chat_adapter.rs  chat_ai.rs  cron.rs  execution.rs  mod.rs  pipeline.rs  skills.rs
crates/smartcrab-app/src-tauri/src/engine/: loop_guard.rs  yaml_parser.rs  yaml_schema.rs
crates/smartcrab-cli/: Cargo.toml
crates/smartcrab-cli/src/: main.rs
crates/smartcrab-cli/tests/: e2e_new.rs
crates/smartcrab/examples/: README.md  basic_pipeline.rs  chatbot.rs  complex_pipeline.rs  conditional_branch.rs  data_enrichment.rs  diamond.rs  fan_in.rs  fan_out.rs  loop_with_exit.rs  multi_graph_runtime.rs  multi_transform.rs  storage_counter.rs  storage_persistent.rs  storage_typed.rs
crates/smartcrab/src/: dag.rs  discord.rs  graph.rs  layer.rs  mcp.rs  runtime.rs  storage.rs  telemetry.rs
crates/smartcrab/tests/: integration_discord.rs
docs/: E2E.md  README.md  RELEASE.md  config.toml
docs/content/: _index.ja.md  _index.md
docs/content/design/: _index.md  architecture.ja.md  architecture.md  claude-code-integration.ja.md  claude-code-integration.md  cli.ja.md  cli.md  dag-engine.ja.md  dag-engine.md  data-flow.ja.md  data-flow.md  graph-engine.ja.md  graph-engine.md  llm-routing.md  memory-and-skills.md  pipeline-engine.md
docs/content/legacy/: _index.ja.md  _index.md
docs/content/spec/: _index.md  chat.ja.md  cli.ja.md  database-schema.md  dto.ja.md  dto.md  graph.ja.md  graph.md  node.ja.md  pipeline-yaml.md  rpc-methods.md  storage.ja.md
docs/spec/: dto.md  graph.md  layer.md
docs/static/css/: custom-main.css
scripts/: setup-dev-signing.sh  setup.sh
scripts/e2e/: build-app.sh  preview-mac.sh  preview-sim.sh
(+151 files in other folders)
