[package]
description = "Tauri v2 desktop app for SmartCrab workflow orchestration engine"
edition.workspace = true
license.workspace = true
name = "smartcrab-app"
publish = false
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
smartcrab = { path = "../../smartcrab" }
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
